[tool.poetry]
name = "example-python3-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^1.11"
pyjwt = "^0.4.2"
rsa = "^3.4"
requests = "^2.21"
feedparser = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
